# pica

./: .gitignore  Cargo.toml  README.md  build.rs  openapi.yaml
.github/workflows/: build.yml  build_and_test.yml  python.yml  python_format.yml
py/pica/: console.py  pyproject.toml
py/pica/pica/: __init__.py
py/pica/pica/packets/: uci.py
scripts/: commandline.py  console.py  data_transfer_example.py  helper.py  ranging_example.py  test.py  uci_packets.py  update_uwb_hal.sh
scripts/pica/: __init__.py
scripts/pica/packets/: uci.py
src/: app_config.rs  device.rs  lib.rs  mac_address.rs  main.rs  packets.rs  pcapng.rs  position.rs  session.rs  uci_packets.pdl  uci_packets.rs  uwb_subsystem.rs  web.rs
src/uwb_subsystem/: device.rs  mod.rs  session.rs
static/: index.html  openapi.html  openapi.yaml
static/src/components/: DeviceInfo.js  Map.js  Orientation.js
tests/: data_transfer.py  helper.py  ranging.py  test_runner.py
