[package]
name = "pica"
version = "0.1.8"
edition = "2021"
description = "Pica is a virtual UWB Controller implementing the FiRa UCI specification."
repository = "https://github.com/google/pica"
license = "Apache-2.0"
readme = "README.md"
keywords = ["uwb", "virtual", "emulator", "controller"]
categories = ["emulators", "virtualization"]
authors = [
  "Adrien Larbanet",
  "Charlie Boutier <charliebout@google.com>",
  "David De Jesus Duarte <licorne@google.com>",
  "Henri Chataing <henrichataing@google.com>",
]
default-run = "pica"
exclude = [
  "res/*",
  "scripts/*"
]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "pica"
path = "src/lib.rs"

[[bin]]
name = "pica"
path = "src/bin/main.rs"

[[bin]]
name = "pica-http"
path = "src/bin/http-server/main.rs"
features = ["web"]

[features]
default = ["web"]
web = ["hyper", "tokio/rt-multi-thread"]

[build-dependencies]
pdl-compiler = "0.2.3"

[dependencies]
anyhow = "1.0.56"
bytes = "1"
futures = "0.3.30"
clap = { version = "4.1.8", default-features = false, features = ["derive", "error-context", "help", "std", "usage"] }
glam = "0.25.0"
hex = "0.4.3"
hyper = { version = "0.14", features = ["server", "stream", "http1", "tcp"], optional = true }
log = "0.4.20"
env_logger = "0.11.1"
num-derive = "0.3.3"
num-traits = "0.2.17"
pdl-runtime = "0.2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.49"
tokio = { version = "1.32.0", features = [ "fs", "io-util", "macros", "net", "rt" ] }
tokio-stream = { version = "0.1.8", features = ["sync"] }
